# acodex

./: .gitignore  .gitmodules  .importlinter  .pre-commit-config.yaml  AGENTS.md  COMPATIBILITY.md  CONTRIBUTING.md  DIFFERENCES.md  Makefile  README.md  differences.md  pyproject.toml  ruff.toml  setup.cfg
.github/workflows/: ci.yaml  codex-ts-sdk-bump.yaml  docs.yaml  publish.yaml
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/compatibility/: differences.rst  index.rst  parity-and-automation.rst
docs/getting-started/: index.rst  installation.rst  quickstart.rst
docs/guides/: images.rst  index.rst  safety-sandbox-approvals.rst  streaming.rst  structured-output.rst  threads-and-sessions.rst  troubleshooting.rst
docs/reference/: core.rst  exceptions.rst  index.rst  types.rst
src/acodex/: __init__.py  _output_schema_file.py  _parsing.py  codex.py  codex_options.py  config.py  events.py  exceptions.py  exec.py  items.py  thread.py  thread_options.py  turn_options.py
src/acodex/_internal/: config.py  exec.py  locator.py  output_schema_file.py  output_type.py  process_runner.py  thread_core.py  toml.py
src/acodex/adapters/sdk/asyncio/: client.py
src/acodex/asyncio/: __init__.py
src/acodex/asyncio/cdp/: __init__.py  client.py  errors.py  json_utils.py  renderer.py  runtime.py  settings.py  targets.py
src/acodex/asyncio/tools/: __init__.py  base.py  create_thread.py  fork_thread.py  handoff_thread.py  list_threads.py  read_thread.py  send_message_to_thread.py  set_thread_archived.py  set_thread_pinned.py  set_thread_title.py  thread_tools.py
src/acodex/cli/: __main__.py  app.py  codex.py  doctor.py  server.py  tools.py
src/acodex/cli/commands/: codex.py  config.py  root.py  runtime.py  server.py  services.py  tools.py
src/acodex/cli/presenters/: base.py  codex.py  doctor.py  server.py
src/acodex/cli/server/: __init__.py  manager.py  models.py  probe.py  process.py  state_store.py
src/acodex/cli/tools/: __init__.py  arguments.py  client_provider.py  command.py  descriptors.py  factories.py  models.py  presenter.py
src/acodex/config/: __init__.py  compat.py  initializer.py  loader.py  models.py  overrides.py  paths.py
src/acodex/constants/: exec.py  toml.py
src/acodex/core/: mcp_tools.py
src/acodex/core/asyncio/: __init__.py
src/acodex/core/asyncio/cdp/: __init__.py  backend.py  client.py  json_utils.py  renderer.py  runtime.py  targets.py  types.py
src/acodex/core/asyncio/tools/: __init__.py  base.py  create_thread.py  fork_thread.py  handoff_thread.py  list_threads.py  read_thread.py  send_message_to_thread.py  set_thread_archived.py  set_thread_pinned.py  set_thread_title.py  thread_tools.py
src/acodex/core/codex_app/: assets.py  bridge.py  cdp.py  renderer_bridge.py  runtime_dependencies.py
src/acodex/core/codex_app/assets/: __init__.py  compat.py  discovery.py  fallback_script.py  matcher.py  models.py  renderer_scan.py  resource_tree.py
src/acodex/core/codex_app/cdp/: __init__.py  client.py  compat.py  errors.py  settings.py  targets.py
src/acodex/http/: app.py
src/acodex/http/mcp/: codec.py  constants.py  dispatcher.py  handler.py  result_adapter.py  routes.py  security.py
src/acodex/ioc/: container.py  http.py
src/acodex/sdk/: __init__.py  _runtime.py  client.py  errors.py  models.py
src/acodex/types/: codex_options.py  events.py  exec.py  input.py  items.py  thread_options.py  turn.py  turn_options.py
tests/: config.py  test_cdp_units.py  test_cli_codex_units.py  test_cli_doctor_units.py  test_cli_main_units.py  test_cli_server_units.py  test_cli_tools_units.py  test_codex_app_units.py  test_config_units.py  test_http_app_units.py  test_mcp_list_threads_e2e.py  test_mcp_tools_client_units.py  test_mcp_units.py  test_sdk_mcp_integration.py  test_sdk_units.py
tests/cdp/: helpers.py  test_client.py  test_renderer.py  test_runtime.py  test_settings.py  test_targets.py
tests/compatibility/: _assertions.py  test_sdk_exports.py  test_ts_class_surface_compat.py  test_ts_codex_options_compat.py  test_ts_events_compat.py  test_ts_items_compat.py  test_ts_sdk_vendor_metadata.py  test_ts_thread_options_compat.py  test_ts_thread_types_compat.py  test_ts_turn_options_compat.py  vendor_ts_sdk.py
tests/integration/: conftest.py  test_real_sdk.py
tests/tools/: test_thread_tools.py
tests/tools/compatibility/: test_get_ts_exports.py  test_ts_class_parser.py  test_ts_type_alias_parser.py  test_ts_type_expr.py
tests/unit/: fake_codex_executable.py  test_codex.py  test_exec_public.py  test_thread_async.py  test_thread_sync.py  test_thread_unknown_types.py
tests/unit/internal/: test_config.py  test_exec.py  test_locator.py  test_output_schema_file.py  test_output_type.py  test_process_runner.py  test_toml.py
tests/unit/types/: test_exec.py
tools/compatibility/: get_ts_exports.py  ts_class_parser.py  ts_type_alias_parser.py  ts_type_expr.py
