[project]
name = "acodex"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Maksim Zayats", email = "maksim@zayats.dev" }]
keywords = ["codex", "openai", "sdk", "cli", "agents", "automation", "streaming", "jsonl"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: Free Threading :: 3 - Stable",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "diwire>=1.4.2",
    "fastapi[standard]>=0.138.0",
    "fastmcp>=3.4.2",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "typer>=0.26.7",
    "typing-extensions>=4.15.0",
    "websockets>=15.0",
]

[project.scripts]
acodex = "acodex.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/maksimzayats/acodex"
Repository = "https://github.com/maksimzayats/acodex"
Issues = "https://github.com/maksimzayats/acodex/issues"
Documentation = "https://docs.acodex.dev"
Changelog = "https://github.com/maksimzayats/acodex/releases"

[dependency-groups]
dev = [
    "mcp>=1.27.2",
    "mypy>=1.19.1",
    "prek>=0.3.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "pydantic>=2 ; python_version < '3.15'",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"

[tool.fastapi]
entrypoint = "acodex.http.app:app"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["^references/"]
ignore_missing_imports = true
local_partial_types = true
warn_unreachable = true
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "unused-awaitable",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-self",
    "unimported-reveal",
    "deprecated",
    "exhaustive-match",
]
disable_error_code = [
    "unused-ignore",
    "no-any-return",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
strict = false
disable_error_code = ["valid-type", "misc", "untyped-decorator", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "real_integration: opt-in tests that exercise a live local Codex CLI setup",
]
filterwarnings = [
    "error",
    # Ignore ResourceWarnings from unclosed sockets/event loops during GC
    # These come from pytest-asyncio internals and are not related to test code
    "ignore:unclosed <socket.socket:ResourceWarning",
    "ignore:unclosed event loop:ResourceWarning",
]

[tool.coverage.run]
source = ["src/acodex"]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = true
